--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,11 +10,15 @@
   margin: 0;
 }
 
+.no-scroll {
+  overflow: hidden !important;
+}
+
 html,
 body {
   max-width: 100vw;
   min-height: 100vh;
-  overflow-x: hidden;
 }
 
 .grecaptcha-badge { visibility: hidden; }
+
